{
  "version": 4,
  "terraform_version": "1.6.0",
  "serial": 5,
  "lineage": "6009c3db-db8e-75f8-dc58-f3d7da238f20",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-10-06T00:06:06.949-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project1-398706/global/firewalls/allow-http",
            "log_config": [],
            "name": "allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/project1-398706/global/networks/default",
            "priority": 1000,
            "project": "project1-398706",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project1-398706/global/firewalls/allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-10-06T00:06:06.813-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project1-398706/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/project1-398706/global/networks/default",
            "priority": 1000,
            "project": "project1-398706",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project1-398706/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20220822",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/project1-398706/zones/europe-west1-b/disks/terraform"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/project1-398706/zones/europe-west1-b/instances/terraform",
            "instance_id": "3043014805157974593",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "tSSEwsk15ng=",
            "name": "terraform",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "130.211.91.120",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/project1-398706/global/networks/default",
                "network_ip": "10.132.0.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/project1-398706/regions/europe-west1/subnetworks/default",
                "subnetwork_project": "project1-398706"
              }
            ],
            "project": "project1-398706",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/project1-398706/zones/europe-west1-b/instances/terraform",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-http",
              "allow-ssh"
            ],
            "tags_fingerprint": "LfyOV3jN6cE=",
            "zone": "europe-west1-b"
          }
        }
      ]
    }
  ]
}